--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="header__content">
         <div class="header__logo-container">
           <div class="header__logo-img-cont">
-            <img src="./png/123.png" alt="Ram Maheshwari Logo Image" class="header__logo-img">
+            <img src="123.png" alt="Ram Maheshwari Logo Image" class="header__logo-img">
           </div>
           <span class="header__logo-sub"> <a href="./index.html">Ashick</href></span>
 
@@ -37,8 +37,8 @@
             </li>
           </ul>
           <div class="header__main-ham-menu-cont">
-            <img src="./png/open.png" alt="hamburger menu" class="header__main-ham-menu">
-            <img src="./png/close.png" alt="hamburger menu close" class="header__main-ham-menu-close d-none">
+            <img src="open.png" alt="hamburger menu" class="header__main-ham-menu">
+            <img src="close.png" alt="hamburger menu close" class="header__main-ham-menu-close d-none">
           </div>
         </div>
       </div>
@@ -178,16 +178,16 @@
             <div class="main-footer__social-cont">
 
               <a target="_blank" rel="noreferrer" href="#">
-                <img class="main-footer__icon" src="./gif/linkp.gif" alt="icon">
+                <img class="main-footer__icon" src="linkp.gif" alt="icon">
               </a>
               <a target="_blank" rel="noreferrer" href="#">
-                <img class="main-footer__icon" src="./png/gitp.png" alt="icon">
+                <img class="main-footer__icon" src="gitp.png" alt="icon">
               </a>
               <a target="_blank" rel="noreferrer" href="#">
-                <img class="main-footer__icon" src="./png/instap.png" alt="icon">
+                <img class="main-footer__icon" src="instap.png" alt="icon">
               </a>
               <a target="_blank" rel="noreferrer" href="#">
-                <img class="main-footer__icon main-footer__icon--mr-none" src="./gif/hertp.gif" alt="icon">
+                <img class="main-footer__icon main-footer__icon--mr-none" src="hertp.gif" alt="icon">
               </a>
             </div>
           </div>
