--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
               <a target="_blank" rel="noreferrer" href="https://www.instagram.com/_as.ic_/">
                 <img class="main-footer__icon" src="./png/instap.png" alt="icon">
               </a>
-              <a target="_blank" rel="noreferrer" href="https://youtu.be/9qBC4L4DO90">
+              <a target="_blank" rel="noreferrer" href="https://spotify.link/FP3wFTq7Tyb">
                 <img class="main-footer__icon main-footer__icon--mr-none" src="./gif/hertp.gif" alt="icon">
               </a>
             </div>
